log
Wed 22 Mar 2023 02:12:17 AM UTC: 
 tests:  0|6
total_score: 0/70
a1148d7
Wed 22 Mar 2023 02:17:02 AM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
test.c: In function ‘createList’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
test.c:468: error: control reaches end of non-void function [-Werror=return-type]
  468 | }
      | 
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:80:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
   80 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:71:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
   71 | void * popBack(List * list) {
      |        ^~~~~~~
list.c:58:6: error: ‘pushBack’ defined but not used [-Werror=unused-function]
   58 | void pushBack(List * list, void * data) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f2a793e
Wed 22 Mar 2023 02:18:22 AM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|5
total_score: 10/70
c1b7d0c
